--- a/styling.css
+++ b/styling.css
@@ -11,6 +11,8 @@ html{
 	padding: 20px;
 	background-color:#9DD2EA;
 	box-shadow: 0px 4px 0px 0px #00ede4;
+	-webkit-box-shadow: 0px 4px 0px 0px #00ede4;
+	-moz-box-shadow: 0px 4px 0px 0px #00ede4;
 	position: relative;
 }
 
@@ -21,6 +23,8 @@ html{
 	position: absolute;
 	left: 500px;
 	box-shadow: 0px 4px 0px #9da853;
+	-webkit-box-shadow: 0px 4px 0px #9da853;
+	-moz-box-shadow: 0px 4px 0px #9da853;
 }
 
 #correct{
@@ -61,6 +65,8 @@ html{
 	text-align: center;
 	line-height: 45px;
 	box-shadow: 0px 4px #8153a8;
+	-webkit-box-shadow: 0px 4px #8153a8;
+	-moz-box-shadow: 0px 4px #8153a8;
 }
 
 #choices{
@@ -78,16 +84,63 @@ html{
 	border-radius: 3px;
 	cursor: pointer;
 	box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+	-moz-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
 	text-align: center;
 	line-height: 80px;
+	transition: all 0.2s;
+	-webkit-transition: all 0.2s;
+	-moz-transition: all 0.2s;
+	-o-transition: all 0.2s;
+	-ms-transition: all 0.2s;
 }
 
-.box:hover{
+.box:hover, #startreset:hover{
 	background-color: #9C89F6;
 	color: white;
 	box-shadow: 0px 4px #6b54d3;
+	-webkit-box-shadow: 0px 4px #6b54d3;
+	-moz-box-shadow: 0px 4px #6b54d3;
+}
+
+.box:active, #startreset:active{
+	box-shadow: 0px 0px #6b54d3;
+	-webkit-box-shadow: 0px 0px #6b54d3;
+	-moz-box-shadow: 0px 0px #6b54d3;
+	top: 4px;
 }
 
 #box4{
 	margin-right: 0;
+}
+
+#startreset{
+	width: 78px;
+	padding: 10px;
+	background-color: rgba(255, 255, 255, 0.5);
+	margin: 0 auto;
+	border-radius: 3px;
+	cursor: pointer;
+	box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+	-moz-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+	text-align: center;
+	transition: all 0.2s;
+	-webkit-transition: all 0.2s;
+	-moz-transition: all 0.2s;
+	-o-transition: all 0.2s;
+	-ms-transition: all 0.2s;
+}
+
+#timeremaining{
+	width: 152px;
+	padding: 10px;
+	position: absolute;
+	top: 395px;
+	left: 400px;
+	background-color: rgba(181, 235, 36, 0.78);
+	border-radius: 3px;
+	box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+	/* visibility: hidden; */
+	display: none;
 }
