--- a/styling.css
+++ b/styling.css
@@ -141,6 +141,25 @@ html{
 	background-color: rgba(181, 235, 36, 0.78);
 	border-radius: 3px;
 	box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+	-moz-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
+	box-shadow: 0px 4px rgba(0, 0, 0, 0.2);
 	/* visibility: hidden; */
 	display: none;
+}
+
+#gameOver{
+	height: 200px;
+	width: 500px;
+	background: linear-gradient(#F3CA6B, #E3706C);
+	color: white;
+	font-size: 2.5em;
+	text-align: center;
+	text-transform: uppercase;
+	position: absolute;
+	top: 100px;
+	left: 45px;
+	z-index: 2;
+	display: none;
+
 }
